-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b50
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8082847 | emb-9 | Christian Tornqvist | P3 | Resolved | Fixed | team |
| JDK-8293071 | openjdk8u362 | Severin Gehwolf | P3 | Resolved | Fixed | b01 |
| JDK-8358832 | shenandoah8u362 | Severin Gehwolf | P3 | Resolved | Fixed | b01 |
| JDK-8275191 | 8u321 | Joakim Nordström | P3 | Resolved | Fixed | b02 |
| JDK-8075343 | 8u60 | Christian Tornqvist | P3 | Closed | Won't Fix | |
| JDK-8275264 | 7u331 | Joakim Nordström | P3 | Resolved | Fixed | b02 |
Latest Windows 10 build (9926) changed the Windows version from 6.4 to 10.0.
Old version (build 9879):
6.4.9879.0
New:
10.0.9926.0
Old version (build 9879):
6.4.9879.0
New:
10.0.9926.0
- backported by
-
JDK-8082847 Update OS detection code to reflect Windows 10 version change
-
- Resolved
-
-
JDK-8275191 Update OS detection code to reflect Windows 10 version change
-
- Resolved
-
-
JDK-8275264 Update OS detection code to reflect Windows 10 version change
-
- Resolved
-
-
JDK-8293071 Update OS detection code to reflect Windows 10 version change
-
- Resolved
-
-
JDK-8358832 Update OS detection code to reflect Windows 10 version change
-
- Resolved
-
-
JDK-8075343 Update OS detection code to reflect Windows 10 version change
-
- Closed
-
(1 backported by, 2 links to)