8071530: Update OS detection code to reflect Windows 10 version change

Reviewed-by: sla, mgronlun