hotspot/src/os/windows/vm/os_windows.cpp
@@ -1693,7 +1693,7 @@ void os::win32::print_windows_version(outputStream* st) {
     }
     break;
 
-  case 6004:
+  case 10000:
     if (is_workstation) {
       st->print("10");
     } else {
